--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
 		<link rel="apple-touch-icon" href="/logo.png" />
 		<link rel="manifest" href="/manifest.json" />
 		<title>Henry Liu</title>
+
+		<script>
+			const l = location;
+
+			if (l.search[1] === '/') {
+				const decoded = l.search
+					.slice(1)
+					.split('&')
+					.map((s) => s.replace(/~and~/g, '&'))
+					.join('?');
+				history.replaceState(
+					null,
+					null,
+					l.pathname.slice(0, -1) + decoded + l.hash
+				);
+			}
+		</script>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
