--- a/public/404.html
+++ b/public/404.html
@@ -25,6 +25,7 @@
 					.replace(/&/g, '~and~') +
 				(l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
 				l.hash;
+			console.log(url);
 			l.replace(url);
 		</script>
 	</head>
