--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
 		<title>Henry Liu</title>
 
 		<script>
+			console.log('index');
 			const l = location;
 			console.log(l.search);
 
-			if (l.search[1] === '/') {
-				const decoded = l.search
-					.slice(1)
-					.split('&')
-					.map((s) => s.replace(/~and~/g, '&'))
-					.join('?');
-				history.replaceState(
-					null,
-					null,
-					l.pathname.slice(0, -1) + decoded + l.hash
-				);
-			}
+			// if (l.search[1] === '/') {
+			// 	const decoded = l.search
+			// 		.slice(1)
+			// 		.split('&')
+			// 		.map((s) => s.replace(/~and~/g, '&'))
+			// 		.join('?');
+			// 	history.replaceState(
+			// 		null,
+			// 		null,
+			// 		l.pathname.slice(0, -1) + decoded + l.hash
+			// 	);
+			// }
 		</script>
 	</head>
 	<body>
