--- a/public/404.html
+++ b/public/404.html
@@ -5,28 +5,31 @@
 		<title>Henry Liu</title>
 
 		<script>
+			console.log('404');
 			const pathSegmentsToKeep = 1;
 			const l = location;
-			const url =
-				l.protocol +
-				'//' +
-				l.hostname +
-				(l.port ? ':' + l.port : '') +
-				l.pathname
-					.split('/')
-					.slice(0, 1 + pathSegmentsToKeep)
-					.join('/') +
-				'/?/' +
-				l.pathname
-					.slice(1)
-					.split('/')
-					.slice(pathSegmentsToKeep)
-					.join('/')
-					.replace(/&/g, '~and~') +
-				(l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-				l.hash;
+			const url = l.protocol;
 			console.log(url);
-			l.replace(url);
+			// const url =
+			// 	l.protocol +
+			// 	'//' +
+			// 	l.hostname +
+			// 	(l.port ? ':' + l.port : '') +
+			// 	l.pathname
+			// 		.split('/')
+			// 		.slice(0, 1 + pathSegmentsToKeep)
+			// 		.join('/') +
+			// 	'/?/' +
+			// 	l.pathname
+			// 		.slice(1)
+			// 		.split('/')
+			// 		.slice(pathSegmentsToKeep)
+			// 		.join('/')
+			// 		.replace(/&/g, '~and~') +
+			// 	(l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+			// 	l.hash;
+			// console.log(url);
+			// l.replace(url);
 		</script>
 	</head>
 
